ibuilder/tests/not_compile/duplicated_default.stderr
error: duplicated default
 --> $DIR/duplicated_default.rs:5:30
  |
5 |     #[ibuilder(default = 42, default = 42)]
  |                              ^^^^^^^
